Configurable order numbers and PDF injection
Introduce configurable order number format and inject OrderPDFService into InsyService. Added order-number.prefix and order-number.separator properties and converted OrderPDFService.generateOrderNumber from a static method to an instance method using @Value-configured prefix/separator. Injected OrderPDFService into InsyService and switched usages to pdfService.generateOrderNumber. Simplified OrderPDFService constructor to @RequiredArgsConstructor and removed unused dependencies (ItemResponseMapper, InvoiceRepository) from service and tests. Updated application.properties and adjusted unit/integration tests to match the refactor (mocking pdfService, numeric amount assertion helper, and various assertions/verification changes).